--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+:root{
+    --main-color: #2c3e50;
+    --main-color-2: #1abc9c;
+}
